--- a/po/ta.po
+++ b/po/ta.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-12 12:32+0200\n"
-"PO-Revision-Date: 2011-08-14 22:11+0200\n"
+"PO-Revision-Date: 2011-08-14 22:12+0200\n"
 "Last-Translator: சுரேஸ்குமார் செல்வநாயகம் <saskumar@hotmail.com>\n"
 "Language-Team: Tamil <ta@li.org>\n"
 "Language: ta\n"
@@ -487,7 +487,7 @@ msgstr "வினவலை புதுப்பி"
 
 #: db_qbe.php:639
 msgid "Use Tables"
-msgstr ""
+msgstr "அட்டவணைகளை பயன்படுத்துக"
 
 #: db_qbe.php:662
 #, php-format
