--- a/po/ta.po
+++ b/po/ta.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-12 12:32+0200\n"
-"PO-Revision-Date: 2011-08-14 22:14+0200\n"
+"PO-Revision-Date: 2011-08-14 22:15+0200\n"
 "Last-Translator: சுரேஸ்குமார் செல்வநாயகம் <saskumar@hotmail.com>\n"
 "Language-Team: Tamil <ta@li.org>\n"
 "Language: ta\n"
@@ -496,7 +496,7 @@ msgstr "தரவுத்தளம் மீது <b>%s</b SQL வினவல
 
 #: db_qbe.php:955 libraries/common.lib.php:1137
 msgid "Submit Query"
-msgstr ""
+msgstr "வினவலை சமர்ப்பி"
 
 #: db_search.php:30 libraries/auth/config.auth.lib.php:77
 #: libraries/auth/config.auth.lib.php:96
