--- a/po/ta.po
+++ b/po/ta.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-12 12:32+0200\n"
-"PO-Revision-Date: 2011-08-14 22:16+0200\n"
+"PO-Revision-Date: 2011-08-14 22:17+0200\n"
 "Last-Translator: சுரேஸ்குமார் செல்வநாயகம் <saskumar@hotmail.com>\n"
 "Language-Team: Tamil <ta@li.org>\n"
 "Language: ta\n"
@@ -515,7 +515,7 @@ msgstr "அனைத்து சொற்களும்"
 
 #: db_search.php:44 db_search.php:280
 msgid "the exact phrase"
-msgstr ""
+msgstr "சரியான சொற்றொடர்"
 
 #: db_search.php:45 db_search.php:281
 msgid "as regular expression"
