--- a/po/ta.po
+++ b/po/ta.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-12 12:32+0200\n"
-"PO-Revision-Date: 2011-08-14 22:21+0200\n"
+"PO-Revision-Date: 2011-08-14 22:27+0200\n"
 "Last-Translator: சுரேஸ்குமார் செல்வநாயகம் <saskumar@hotmail.com>\n"
 "Language-Team: Tamil <ta@li.org>\n"
 "Language: ta\n"
@@ -542,7 +542,7 @@ msgstr "உலாவு"
 #: db_search.php:230
 #, php-format
 msgid "Delete the matches for the %s table?"
-msgstr ""
+msgstr "%s அட்டவணையில் பொருத்தப்பாடுகளை நீக்குவதா?"
 
 #: db_search.php:230 libraries/display_tbl.lib.php:1362
 #: libraries/display_tbl.lib.php:2342
