Translation update done using Pootle.

--- a/po/ta.po
+++ b/po/ta.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-12 12:32+0200\n"
-"PO-Revision-Date: 2011-08-14 22:27+0200\n"
+"PO-Revision-Date: 2011-08-14 22:28+0200\n"
 "Last-Translator: சுரேஸ்குமார் செல்வநாயகம் <saskumar@hotmail.com>\n"
 "Language-Team: Tamil <ta@li.org>\n"
 "Language: ta\n"
@@ -560,8 +560,8 @@ msgstr "அழி"
 #, php-format
 msgid "<b>Total:</b> <i>%s</i> match"
 msgid_plural "<b>Total:</b> <i>%s</i> matches"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "<b>மொத்தம்:</b> <i>%s</i> பொருத்தம்"
+msgstr[1] "<b>மொத்த:</b> <i>%s</i> பொருத்தங்கள்"
 
 #: db_search.php:266
 msgid "Search in database"
