--- a/po/sv.po
+++ b/po/sv.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-12 12:32+0200\n"
-"PO-Revision-Date: 2011-08-15 01:22+0200\n"
+"PO-Revision-Date: 2011-08-15 01:24+0200\n"
 "Last-Translator:  <stefan@inkopsforum.se>\n"
 "Language-Team: swedish <sv@li.org>\n"
 "Language: sv\n"
@@ -1119,10 +1119,9 @@ msgid "Query statistics"
 msgstr "Visa statistik"
 
 #: js/messages.php:93
-#, fuzzy
 #| msgid "Failed to read configuration file"
 msgid "Local monitor configuration icompatible"
-msgstr "Kunde inte läsa konfigurationsfilen"
+msgstr "Lokal övervakningskonfiguration ej kompatibel"
 
 #: js/messages.php:94
 msgid ""
