--- a/po/ja.po
+++ b/po/ja.po
@@ -11681,8 +11681,8 @@ msgid "Query Cache usage"
 msgstr "クエリキャッシュの使用状況"
 
 #: po/advisory_rules.php:81
-msgid "Less than 80% of the query cache is being utilized."
-msgstr "クエリキャッシュの利用率が 80% 未満です。"
+msgid "Less than 80%% of the query cache is being utilized."
+msgstr "クエリキャッシュの利用率が 80%% 未満です。"
 
 #: po/advisory_rules.php:82
 msgid ""
