Translation update done using Pootle.

--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-12 12:32+0200\n"
-"PO-Revision-Date: 2011-08-15 09:28+0200\n"
+"PO-Revision-Date: 2011-08-15 09:32+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -11726,6 +11726,11 @@ msgid ""
 "refman/5.1/en/ha-memcached.html\\\">memcached</a> instead of the MySQL Query "
 "cache, especially if you have multiple slaves."
 msgstr ""
+"Oldukça yüksek trafikli veritabanı ile MySQL Sorgu önbelleği "
+"kullanıyorsunuz. MySQL Sorgu önbelleği yerine <a "
+"href=\\\"http://dev.mysql.com/doc/refman/5.1/en/ha-"
+"memcached.html\\\">memcached</a> kullanmayı hesaba katmak değebilir "
+"özelliklede çoklu slave'lere sahipseniz."
 
 #: po/advisory_rules.php:73
 #, php-format
