--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-12 12:32+0200\n"
-"PO-Revision-Date: 2011-08-15 09:32+0200\n"
+"PO-Revision-Date: 2011-08-15 09:35+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -11738,6 +11738,8 @@ msgid ""
 "The query cache is enabled and the server receives %d queries per second. "
 "This rule fires if there is more than 100 queries per second."
 msgstr ""
+"Sorgu önbelleği etkin ve sunucu her saniyede %d sorgu alıyor. Eğer her "
+"saniyede 100'den fazla sorgu varsa bu kural işe yaramaz."
 
 #: po/advisory_rules.php:75
 msgid "Query cache efficiency (%)"
