--- a/po/cs.po
+++ b/po/cs.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-15 09:43+0200\n"
-"PO-Revision-Date: 2011-08-11 11:38+0200\n"
+"PO-Revision-Date: 2011-08-15 09:50+0200\n"
 "Last-Translator: Michal Čihař <michal@cihar.com>\n"
 "Language-Team: czech <cs@li.org>\n"
 "Language: cs\n"
@@ -1127,10 +1127,9 @@ msgid "Query statistics"
 msgstr "Statistika dotazů"
 
 #: js/messages.php:93
-#, fuzzy
 #| msgid "Failed to read configuration file"
 msgid "Local monitor configuration icompatible"
-msgstr "Nepodařilo se načíst konfigurační soubor"
+msgstr "Lokální nastavení monitoru není kompatibilní"
 
 #: js/messages.php:94
 msgid ""
