--- a/po/cs.po
+++ b/po/cs.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-15 09:43+0200\n"
-"PO-Revision-Date: 2011-08-15 09:50+0200\n"
+"PO-Revision-Date: 2011-08-15 09:53+0200\n"
 "Last-Translator: Michal Čihař <michal@cihar.com>\n"
 "Language-Team: czech <cs@li.org>\n"
 "Language: cs\n"
@@ -1140,10 +1140,9 @@ msgid ""
 msgstr ""
 
 #: js/messages.php:96
-#, fuzzy
 #| msgid "Query cache"
 msgid "Query cache efficiency"
-msgstr "Vyrovnávací paměť dotazů"
+msgstr "Úspěšnost vyrovnávací paměti dotazů"
 
 #: js/messages.php:97 po/advisory_rules.php:70
 #, fuzzy
