Translation update done using Pootle.

--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-15 10:09+0200\n"
-"PO-Revision-Date: 2011-08-15 09:36+0200\n"
+"PO-Revision-Date: 2011-08-15 23:08+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -1700,7 +1700,7 @@ msgstr ""
 #, fuzzy
 #| msgid "Add/Delete columns"
 msgid "Select two columns"
-msgstr "Sütun Ekle/Sil"
+msgstr "İki sütun seç"
 
 #: js/messages.php:279
 msgid "Select two different columns"
