--- a/po/tr.po
+++ b/po/tr.po
@@ -1787,10 +1787,9 @@ msgid ""
 msgstr ""
 
 #: js/messages.php:307
-#, fuzzy
 #| msgid "Go to view"
 msgid "Go to link"
-msgstr "Görünüme git"
+msgstr "Bağlantıya git"
 
 #: js/messages.php:310
 msgid "Generate password"
