--- a/po/tr.po
+++ b/po/tr.po
@@ -7932,10 +7932,9 @@ msgid "Operator"
 msgstr "İşletici"
 
 #: libraries/tbl_select.lib.php:131
-#, fuzzy
 #| msgid "Search"
 msgid "Table Search"
-msgstr "Ara"
+msgstr "Tablo Arama"
 
 #: libraries/transformations/application_octetstream__download.inc.php:10
 msgid ""
