Translation update done using Pootle.

--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-15 10:09+0200\n"
-"PO-Revision-Date: 2011-08-15 23:11+0200\n"
+"PO-Revision-Date: 2011-08-15 23:12+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -10243,7 +10243,6 @@ msgid "Using the monitor:"
 msgstr "İzleyici kullanımı:"
 
 #: server_status.php:1509
-#, fuzzy
 #| msgid ""
 #| "<b>Using the monitor:</b><br/> Ok, you are good to go! Once you click "
 #| "'Start monitor' your browser will refresh all displayed charts in a "
@@ -10260,16 +10259,11 @@ msgid ""
 "change the refresh rate under 'Settings', or remove any chart using the cog "
 "icon on each respective chart."
 msgstr ""
-"<b>İzleyici kullanımı:</b><br/> Tamam, ilerlemeye hazırsınız! Bir kere "
-"'İzlemeyi başlat'a tıkladığınızda tarayıcınız tüm görüntülenen çizelgeleri "
-"düzenli aralıklarla yenileyecek. 'Ayarlar' altında çizelgeleri ekleyebilir "
-"ve yenileme oranını değiştirebilirsiniz veya her çizelgenin kendi dişli çark "
-"simgesini kullanarak herhangi bir çizelgeyi kaldırabilirsiniz. "
-"<p>Günlüklerden sorguları görüntülemek için herhangi bir çizelgede sol fare "
-"tuşunu basılı tutarak ve çizelge üzerinde kaydırarak ilgili zaman aralığını "
-"seçin. Bir kere onaylandı mı bu, gruplanmış sorguların tablolarını "
-"yükleyecek. Daha fazla çözümlemesi için herhangi bir meydana gelen SELECT "
-"ifadesine tıklayabilirsiniz.</p>"
+"Tamam, ilerlemeye hazırsınız! Bir kere 'İzlemeyi başlat'a tıkladığınızda "
+"tarayıcınız tüm görüntülenen çizelgeleri düzenli aralıklarla yenileyecek. "
+"'Ayarlar' altında çizelgeleri ekleyebilir ve yenileme oranını "
+"değiştirebilirsiniz veya her çizelgenin kendi dişli çark simgesini "
+"kullanarak herhangi bir çizelgeyi kaldırabilirsiniz."
 
 #: server_status.php:1511
 #, fuzzy
