--- a/po/tr.po
+++ b/po/tr.po
@@ -10266,7 +10266,6 @@ msgstr ""
 "kullanarak herhangi bir çizelgeyi kaldırabilirsiniz."
 
 #: server_status.php:1511
-#, fuzzy
 #| msgid ""
 #| "<b>Using the monitor:</b><br/> Ok, you are good to go! Once you click "
 #| "'Start monitor' your browser will refresh all displayed charts in a "
@@ -10283,16 +10282,11 @@ msgid ""
 "confirmed, this will load a table of grouped queries, there you may click on "
 "any occuring SELECT statements to further analyze them."
 msgstr ""
-"<b>İzleyici kullanımı:</b><br/> Tamam, ilerlemeye hazırsınız! Bir kere "
-"'İzlemeyi başlat'a tıkladığınızda tarayıcınız tüm görüntülenen çizelgeleri "
-"düzenli aralıklarla yenileyecek. 'Ayarlar' altında çizelgeleri ekleyebilir "
-"ve yenileme oranını değiştirebilirsiniz veya her çizelgenin kendi dişli çark "
-"simgesini kullanarak herhangi bir çizelgeyi kaldırabilirsiniz. "
-"<p>Günlüklerden sorguları görüntülemek için herhangi bir çizelgede sol fare "
+"Günlüklerden sorguları görüntülemek için herhangi bir çizelgede sol fare "
 "tuşunu basılı tutarak ve çizelge üzerinde kaydırarak ilgili zaman aralığını "
 "seçin. Bir kere onaylandı mı bu, gruplanmış sorguların tablolarını "
 "yükleyecek. Daha fazla çözümlemesi için herhangi bir meydana gelen SELECT "
-"ifadesine tıklayabilirsiniz.</p>"
+"ifadesine tıklayabilirsiniz."
 
 #: server_status.php:1518
 msgid "Please note:"
