Translation update done using Pootle.

--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-15 10:09+0200\n"
-"PO-Revision-Date: 2011-08-15 23:12+0200\n"
+"PO-Revision-Date: 2011-08-15 23:13+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -10293,7 +10293,6 @@ msgid "Please note:"
 msgstr "Lütfen unutmayın:"
 
 #: server_status.php:1520
-#, fuzzy
 #| msgid ""
 #| "<b>Please note:</b> Enabling the general_log may increase the server load "
 #| "by 5-15%. Also be aware that generating statistics from the logs is a "
@@ -10306,11 +10305,11 @@ msgid ""
 "it is advisable to select only a small time span and to disable the "
 "general_log and empty its table once monitoring is not required any more."
 msgstr ""
-"<b>Lütfen unutmayın:</b> general_log'u etkinleştirmek sunucu yükünü %5-15 "
-"arttırabilir. Aynı zamanda günlükten oluşturulan istatistiklerin yoğun görev "
-"yükü olduğundan haberiniz olsun bu yüzden sadece küçük zaman aralıkları "
-"seçmek ve general_log'u etkisizleştirmek tavsiye edilir ve tablolarını bir "
-"defa boşaltmak daha fazla izlemeyi gerektirmez."
+"general_log'u etkinleştirmek sunucu yükünü %5-15 arttırabilir. Aynı zamanda "
+"günlükten oluşturulan istatistiklerin yoğun görev yükü olduğundan haberiniz "
+"olsun bu yüzden sadece küçük zaman aralıkları seçmek ve general_log'u "
+"etkisizleştirmek tavsiye edilir ve tablolarını bir defa boşaltmak daha fazla "
+"izlemeyi gerektirmez."
 
 #: server_status.php:1533
 msgid "Preset chart"
