Translation update done using Pootle.

--- a/po/es.po
+++ b/po/es.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-15 10:09+0200\n"
-"PO-Revision-Date: 2011-08-15 23:23+0200\n"
+"PO-Revision-Date: 2011-08-15 23:24+0200\n"
 "Last-Translator: Matías Bellone <matiasbellone@gmail.com>\n"
 "Language-Team: spanish <es@li.org>\n"
 "Language: es\n"
@@ -1144,6 +1144,11 @@ msgid ""
 "likely that your current configuration will not work anymore. Please reset "
 "your configuration to default in the <i>Settings</i> menu."
 msgstr ""
+"La configuración de distribución de gráficos en el almacenamiento local del "
+"navegador no es compatible con la nueva versión del sistema de "
+"monitorización. Es probable que la configuración no funcione. Porfavor, "
+"reinicie la configuración a la predeterminada en el menú "
+"<i>Configuración</i>."
 
 #: js/messages.php:96
 #, fuzzy
