--- a/po/es.po
+++ b/po/es.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-15 10:09+0200\n"
-"PO-Revision-Date: 2011-08-15 23:28+0200\n"
+"PO-Revision-Date: 2011-08-15 23:29+0200\n"
 "Last-Translator: Matías Bellone <matiasbellone@gmail.com>\n"
 "Language-Team: spanish <es@li.org>\n"
 "Language: es\n"
@@ -1707,7 +1707,7 @@ msgstr "Arrastre y seleccione un área en el gráfico para ampliarla."
 
 #: js/messages.php:270
 msgid "Click reset zoom link to come back to original state."
-msgstr ""
+msgstr "Pulse el enlace de restaurar ampliación para volver al estado original."
 
 #: js/messages.php:272
 msgid "Click a data point to view and possibly edit the data row."
