--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-15 10:09+0200\n"
-"PO-Revision-Date: 2011-08-15 23:30+0200\n"
+"PO-Revision-Date: 2011-08-15 23:31+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -1684,6 +1684,8 @@ msgstr ""
 #: js/messages.php:270
 msgid "Click reset zoom link to come back to original state."
 msgstr ""
+"Orijinal durumuna geri gelmek için yakınlaştırmayı sıfırla bağlantısına "
+"tıklayın."
 
 #: js/messages.php:272
 msgid "Click a data point to view and possibly edit the data row."
