--- a/po/es.po
+++ b/po/es.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-15 10:09+0200\n"
-"PO-Revision-Date: 2011-08-15 23:30+0200\n"
+"PO-Revision-Date: 2011-08-15 23:32+0200\n"
 "Last-Translator: Matías Bellone <matiasbellone@gmail.com>\n"
 "Language-Team: spanish <es@li.org>\n"
 "Language: es\n"
@@ -1717,6 +1717,7 @@ msgstr ""
 #: js/messages.php:274
 msgid "The plot can be resized by dragging it along the bottom right corner."
 msgstr ""
+"El gráfico puede redimensionarse arrastrando la esquina inferior derecha."
 
 #: js/messages.php:276
 msgid "Strings are converted into integer for plotting"
