--- a/po/es.po
+++ b/po/es.po
@@ -1816,10 +1816,9 @@ msgstr ""
 "contenido."
 
 #: js/messages.php:307
-#, fuzzy
 #| msgid "Go to view"
 msgid "Go to link"
-msgstr "Ir a la vista"
+msgstr "Ir al enlace"
 
 #: js/messages.php:310
 msgid "Generate password"
