Translation update done using Pootle.

--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-15 10:09+0200\n"
-"PO-Revision-Date: 2011-08-15 23:36+0200\n"
+"PO-Revision-Date: 2011-08-15 23:39+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -1693,7 +1693,7 @@ msgstr ""
 
 #: js/messages.php:274
 msgid "The plot can be resized by dragging it along the bottom right corner."
-msgstr ""
+msgstr "Çizim en alt sağ köşe boyunca sürüklenerek yeniden boyutlandırılabilir."
 
 #: js/messages.php:276
 msgid "Strings are converted into integer for plotting"
